New core organization

--- a/src/SimpleViewer/views/template.htm
+++ b/src/SimpleViewer/views/template.htm
@@ -17,5 +17,5 @@ $_template->getTemplateObject('CssFile')->add($sv_css);
 
 _use('jquery');
 
-_render(getContainer()->get('locator')->locateView(\CarteBlanche\App\Abstracts\AbstractController::$template));
+_render(getContainer()->get('locator')->locateView(\CarteBlanche\Abstracts\AbstractController::$template));
 ?>
